WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
145878
[EFL] canvas/philip/tests/toDataURL.jpeg.foo tests have been failed since
r185417
.
https://bugs.webkit.org/show_bug.cgi?id=145878
Summary
[EFL] canvas/philip/tests/toDataURL.jpeg.foo tests have been failed since r18...
Hunseop Jeong
Reported
2015-06-11 04:56:05 PDT
canvas/philip/tests/toDataURL.jpeg.primarycolours.html [ Failure ] canvas/philip/tests/toDataURL.jpeg.quality.basic.html [ Failure ]
Attachments
WIP
(1.52 KB, patch)
2015-06-11 06:04 PDT
,
Hunseop Jeong
no flags
Details
Formatted Diff
Diff
Patch
(3.54 KB, patch)
2015-06-11 09:04 PDT
,
KwangHyuk
no flags
Details
Formatted Diff
Diff
Patch
(4.86 KB, patch)
2015-06-11 10:13 PDT
,
KwangHyuk
no flags
Details
Formatted Diff
Diff
screenshot - chrome browser
(53.27 KB, image/png)
2015-06-11 10:19 PDT
,
KwangHyuk
no flags
Details
screenshot - firefox
(59.76 KB, image/png)
2015-06-11 10:19 PDT
,
KwangHyuk
no flags
Details
Patch
(4.55 KB, patch)
2015-06-12 08:37 PDT
,
KwangHyuk
no flags
Details
Formatted Diff
Diff
RB conversion
(4.55 KB, patch)
2015-06-12 09:19 PDT
,
KwangHyuk
no flags
Details
Formatted Diff
Diff
RB conversion
(4.55 KB, patch)
2015-06-12 09:21 PDT
,
KwangHyuk
no flags
Details
Formatted Diff
Diff
Show Obsolete
(5)
View All
Add attachment
proposed patch, testcase, etc.
KwangHyuk
Comment 1
2015-06-11 05:13:09 PDT
(In reply to
comment #0
)
> canvas/philip/tests/toDataURL.jpeg.primarycolours.html [ Failure ] > canvas/philip/tests/toDataURL.jpeg.quality.basic.html [ Failure ]
Oops R-B converting should be there on original source code of JPEG encoder. Could you fix it ? May be, you should use EFL macro.
Hunseop Jeong
Comment 2
2015-06-11 06:04:26 PDT
Created
attachment 254718
[details]
WIP I uploaded the patch to fix the "toDataURL.jpeg.primarycolours" test. But it doesn't look good to me.
KwangHyuk
Comment 3
2015-06-11 08:17:56 PDT
(In reply to
comment #2
)
> Created
attachment 254718
[details]
> WIP > > I uploaded the patch to fix the "toDataURL.jpeg.primarycolours" test. > But it doesn't look good to me.
Input data seem to be pre-processed in order to let JPEGImageEncoder handle it correctly.
KwangHyuk
Comment 4
2015-06-11 09:04:01 PDT
Created
attachment 254726
[details]
Patch
KwangHyuk
Comment 5
2015-06-11 09:05:57 PDT
toDataURL.jpeg.primarycolours : passed toDataURL.jpeg.quality.basic : still has more issue related with image quality. still working in progress.
KwangHyuk
Comment 6
2015-06-11 10:13:58 PDT
Created
attachment 254727
[details]
Patch
KwangHyuk
Comment 7
2015-06-11 10:18:15 PDT
for this test toDataURL.jpeg.quality.basic, Chrome and firefox shows same result. (refer the attached screenshot) Therefore test should be ignored.
KwangHyuk
Comment 8
2015-06-11 10:19:19 PDT
Created
attachment 254728
[details]
screenshot - chrome browser
KwangHyuk
Comment 9
2015-06-11 10:19:46 PDT
Created
attachment 254729
[details]
screenshot - firefox
Gyuyoung Kim
Comment 10
2015-06-11 19:47:28 PDT
Comment on
attachment 254727
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=254727&action=review
> Source/WebCore/platform/graphics/efl/ImageBufferEfl.cpp:72 > + int w = cairo_image_surface_get_width(image);
s/w/width/g
> Source/WebCore/platform/graphics/efl/ImageBufferEfl.cpp:73 > + int h = cairo_image_surface_get_height(image);
s/h/height/g
> Source/WebCore/platform/image-encoders/JPEGImageEncoder.cpp:87 > +{
Added unnecessary spaces.
KwangHyuk
Comment 11
2015-06-12 08:37:53 PDT
Created
attachment 254802
[details]
Patch
KwangHyuk
Comment 12
2015-06-12 08:39:43 PDT
(In reply to
comment #10
)
> Comment on
attachment 254727
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=254727&action=review
> > > Source/WebCore/platform/graphics/efl/ImageBufferEfl.cpp:72 > > + int w = cairo_image_surface_get_width(image); > > s/w/width/g >
Thank you, fixed.
> > Source/WebCore/platform/graphics/efl/ImageBufferEfl.cpp:73 > > + int h = cairo_image_surface_get_height(image); > > s/h/height/g > > > Source/WebCore/platform/image-encoders/JPEGImageEncoder.cpp:87 > > +{ > > Added unnecessary spaces.
Fixed too. :)
KwangHyuk
Comment 13
2015-06-12 09:19:51 PDT
Created
attachment 254804
[details]
RB conversion
KwangHyuk
Comment 14
2015-06-12 09:21:19 PDT
Created
attachment 254805
[details]
RB conversion
WebKit Commit Bot
Comment 15
2015-06-12 09:45:51 PDT
Comment on
attachment 254805
[details]
RB conversion Clearing flags on attachment: 254805 Committed
r185506
: <
http://trac.webkit.org/changeset/185506
>
WebKit Commit Bot
Comment 16
2015-06-12 09:45:57 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug