[EFL] canvas/philip/tests/toDataURL.jpeg.foo tests have been failed since r185417. https://bugs.webkit.org/show_bug.cgi?id=145878

Reviewed by Gyuyoung Kim.

Fix input buffer alignment issue.

No new tests, canvas/philip/tests/toDataURL.jpeg.foo can be used.

* platform/graphics/efl/ImageBufferEfl.cpp:
(WebCore::encodeImagePNG):
(WebCore::encodeImageJPEG):
(WebCore::ImageBuffer::toDataURL):


Canonical link: https://commits.webkit.org/163971@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185506 268f45cc-cd09-0410-ab3c-d52691b4dbfc